updated particle logic and enhanced collisions